<resources>
    <string name="app_name">JoyFood</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_sighup">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <!-- <string name="action_sign_in_short">Sign in</string> -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--Firebase Authentication-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Log in failed, check email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove accout</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <!-- <string name="title_activity_login">Sign in</string> -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_text">Write a post</string>
    <string name="hint_msg">Write a comment</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password? Send reset email!</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_backhome"><![CDATA[<< Back Home]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send Email</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Log Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

</resources>
