<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
            android:id="@+id/img_logo_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/btn_setting_to_login"
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0"
                android:background="@null"
                android:textColor="@color/bg_main"
                android:textAllCaps="false"
                android:text="Not logged in yet! MUST LOG IN before settings!\n\nGo to LOG IN" />

            <LinearLayout
                android:id="@+id/setting_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/old_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/new_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/new_pass"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/changeEmail"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/btn_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/btn_change"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/changePass"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/btn_bg"
                    android:text="@string/btn_change"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <!--Send email for resetting password -->
                <Button
                    android:id="@+id/send"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/btn_bg"
                    android:text="@string/btn_send"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/change_password_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_password"
                    android:textStyle="bold"
                    android:background="@null"
                    android:textAllCaps="false"
                    android:textColor="@color/bg_main"/>

                <Button
                    android:id="@+id/change_email_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_email"
                    android:background="@null"
                    android:textAllCaps="false"
                    android:textColor="@color/bg_main" />

                <Button
                    android:id="@+id/sending_pass_reset_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/send_password_reset_email"
                    android:background="@null"
                    android:textAllCaps="false"
                    android:textColor="@color/bg_main" />

                <Button
                    android:id="@+id/remove_user_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/remove_user"
                    android:background="@null"
                    android:textAllCaps="false"
                    android:textColor="@color/bg_main" />

                <Button
                    android:id="@+id/sign_out"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/btn_sign_out"
                    android:background="@drawable/btn_match_parent_shap"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_finish_all_acts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Close APP"
                    android:background="@drawable/btn_shape"
                    android:textColor="@color/btn_bg"
                    android:textStyle="bold"/>

                <!--<Button-->
                    <!--android:id="@+id/btn_force_off_line"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="30dp"-->
                    <!--android:text="Force off line"-->
                    <!--android:background="@drawable/btn_shape"-->
                    <!--android:textColor="@color/btn_bg"-->
                    <!--android:textStyle="bold"/>-->

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
